slightly adjusted  media query for large monitors to fix alignment issue for img2 & img4

--- a/styles.css
+++ b/styles.css
@@ -1221,12 +1221,12 @@ position: absolute;
 /* adding media query for large monitors*/
 @media (min-width: 1440px) {
     #img2 {
-        bottom: 0;
+        bottom: -8px;
         height: 30%;
     }
 
     #img4 {
-        bottom: 0;
+        bottom: -8px;
         height: 30vh;
     }
 }
